example/computer system architecture/c/bad/stackerror.c
char *f() { char a[10]="hello"; return a; }



// char *f() { char *a="hello"; a[2]='c'; return a; }